# jirald

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  github_app.py  github_app_setup.md  jira_client.py  main.py  mcp_config.json  mvp_bedrock_client.py  mvp_mcp_server.py  mvp_readme.md  pyproject.toml  services.py  test_github_app.py
.github/workflows/: deploy.yml
prompts/: card_creation_prompt.md  card_update_prompt.md  response_generation_prompt.md
